# vban-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
src/vban_cli/: __init__.py  app.py  bus.py  command.py  comp.py  denoiser.py  eq.py  error.py  gainlayer.py  gate.py  help.py  recorder.py  strip.py  validation.py
src/vmr_cli/: __init__.py  app.py  bus.py  context.py  eq.py  help.py  strip.py
